recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:31: error: not found: value k
	motif(length,levels,k)
                            ^